name:                YourProject
version:             0.1.0.0
synopsis:            Simple haskell lib
homepage:            http://gogotanaka.me/
license:             MIT
license-file:        LICENSE
author:              gogotanaka
maintainer:          mail@tanakakazuki.com
-- copyright:           
category:            Math
build-type:          Simple
-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  

cabal-version:       >=1.10

library
  exposed-modules:     YourProject
  other-modules:       
  build-depends:       base >=4.7 && <4.8
  default-language:    Haskell2010
  -- Directories containing source files.
  -- hs-source-dirs:      
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
