name:                YourProject
version:             0.1.0.0
synopsis:            Simple haskell lib
description:         Simple haskell lib
homepage:            http://gogotanaka.me/
license:             MIT
license-file:        LICENSE
author:              gogotanaka
maintainer:          mail@tanakakazuki.com
category:            Math
build-type:          Simple
-- extra-source-files:  
-- copyright:           

cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     YourProject
  build-depends:       base >=4.7 && <4.8
  default-language:    Haskell2010
  -- other-extensions:    
  -- other-modules:       
